Mon Feb 23 09:22:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Null_Component/descriptors/run_test.pl:
          Added libpath

Mon Feb 23 08:19:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CIAO_ComponentServer/SimpleComponent/SimpleComponent.mpc
          Fixed build order

Sun Feb 22 16:34:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Module.cpp
          Resolved a few typos.

        * examples/Hello/descriptors/run_NodeDaemons.pl
        * examples/Hello/step-by-step.html
          Adapted to match with the current status.

Sun Feb 22 07:27:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.cpp
        * ciao/ComponentServer/Configurators/Basic_Config_Manager.cpp
        * ciao/Containers/Container_Base.cpp
        * ciao/Containers/Servant_Activator.cpp
        * ciao/Containers/Servant_Activator.h
        * ciao/Containers/Session/Session_Container.cpp
        * ciao/Contexts/Context_Impl_T.cpp
        * ciao/Server_init.cpp
        * DAnCE/DomainApplication/Domain_Application_Impl.cpp
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp
        * DAnCE/RepositoryManager/Options.cpp
        * DAnCE/RepositoryManager/RMadmin.cpp
        * DAnCE/RepositoryManager/ZIP_Wrapper.cpp
        * DAnCE/StaticConfigurator/StaticDAnCEParser.cpp
        * DAnCE/TargetManager/CmpClient.cpp
        * DAnCE/TargetManager/DomainDataManager.cpp
        * docs/tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributorDriver.cpp
        * examples/BasicSP/BMClosedED/BMClosedED_exec.cpp
        * examples/BasicSP/BMDevice/BMDevice_exec.cpp